@@ -1,4 +1,6 @@
 Changes in 1.7.3 (??.??.2011)
+  
+ - Fix memory-leaks in example 22 MaterialViewer
 
  - Fix array::erase which did destroy objects more than once when used with a range (thx @ RedDragCZ for reporting + testcase).
 
